syntax = "proto3";
package routerprotocol.routerchain.multichain;

option go_package = "github.com/router-protocol/sdk-go/routerchain/multichain/types";

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

enum ChainType {
  option (gogoproto.goproto_enum_prefix) = false;
 
  CHAIN_TYPE_ROUTER = 0 [(gogoproto.enumvalue_customname) = "CHAIN_TYPE_ROUTER"];
  CHAIN_TYPE_EVM = 2 [(gogoproto.enumvalue_customname) = "CHAIN_TYPE_EVM"];
  CHAIN_TYPE_COSMOS = 3 [(gogoproto.enumvalue_customname) = "CHAIN_TYPE_COSMOS"];
  CHAIN_TYPE_POLKADOT = 4 [(gogoproto.enumvalue_customname) = "CHAIN_TYPE_POLKADOT"];
  CHAIN_TYPE_SOLANO = 5 [(gogoproto.enumvalue_customname) = "CHAIN_TYPE_SOLANO"];
  CHAIN_TYPE_NEAR = 6 [(gogoproto.enumvalue_customname) = "CHAIN_TYPE_NEAR"];
}